Add REST API to support actor deletion (#353)
Implement actor deletion as a first-class API operation.  Deletion
removes all user-level and runtime-level state associated with the
targeted actor instance. A delete operation can be invoked either by
the actor on itself or externally to the actor.

Fixes #250.
